--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -7,9 +7,13 @@
 }
 
 .header {
+    font-size: 1.4rem;
     height: 7rem;
     background-color: #fff;
     border-bottom: var(--color-Grey-light-2);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .content {
@@ -19,10 +23,15 @@
 .sidebar {
     background-color: var(--color-Grey-dark-1);
     flex: 0 0 18%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .hotel-view {
     background-color: #fff;
+    // tests
     background-color: orangered;
+    height: 80rem;
     flex: 1;
 }
