--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -167,7 +167,7 @@
     .overview {
         display: flex;
         align-items: center;
-        border-bottom: 1px solid var(--color-Grey-light-2);
+        border-bottom: var(--line);
         &__heading {
             font-size: 2.25rem;
             font-weight: 300;
