--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -226,8 +226,15 @@
         background-color: transparent;
         cursor: pointer;
         transition: all .2s;
+        & span {
+            margin-left: .3rem;
+            transition: margin-left .2s;
+        }
         &:hover {
             color: var(--color-Grey-dark-1);
+            span {
+                margin-left: .8rem;
+            }
         }
         &:focus {
             outline: none;
@@ -305,5 +312,61 @@
             &:not(:last-child) {
                 margin-right: -1.5rem;
             }
+        }
+    }
+    
+    //*REVIEWS
+    .review {
+        background-color: #fff;
+        box-shadow: var(--shadow-light);
+        padding: 3rem;
+        margin-bottom: 3.5rem;
+        position: relative;
+        overflow: hidden;
+        &__text {
+            font-size: 1.4rem;
+            font-weight: 400;
+            // margin-bottom: 2rem;
+            z-index: 10;
+            position: relative;
+        }
+        &__user {
+            display: flex;
+            align-items: center;
+            margin-top: 2rem;
+        }
+        &__photo {
+            height: 4.5rem;
+            width: 4.5rem;
+            border-radius: 50%;
+            margin-right: 1.5rem;
+        }
+        &__user-box {
+            margin-right: auto;
+        }
+        &__user-name {
+            font-size: 1.1rem;
+            font-weight: 600;
+            text-transform: uppercase;
+        }
+        &__user-date {
+            font-size: 1rem;
+            color: var(--color-Grey-dark-3);
+        }
+        &__rating {
+            font-size: 2.2rem;
+            font-weight: 300;
+            color: var(--color-primary);
+        }
+        &::before {
+            content: "\201C";
+            position: absolute;
+            top: -2.75rem;
+            left: -1rem;
+            line-height: 1;
+            font-size: 20rem;
+            color: var(--color-Grey-light-2);
+            font-family: sans-serif;
+            z-index: 1;
         }
     }
