--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -16,6 +16,9 @@
     --line: 1px solid var(--color-Grey-light-2);
 }
 
+$bp-largest:75em;
+$bp-large:68.75em;
+$bp-medium:56.25em;
 //* Global reset.
 * {
     margin: 0;
@@ -32,6 +35,9 @@
 html {
     box-sizing: border-box;
     font-size: 62.5%; // 1rem = 10px , 10px/16px = 62.5%
+    @media only screen and (max-width: $bp-large) {
+        font-size: 50%;
+    }
 }
 
 //* Font defenitions and our background gradient.
